--- a/root.html
+++ b/root.html
@@ -13,10 +13,11 @@
     <div class="cart">
         <p>Cart({{ cart.length }})</p>
     </div>
-    <product :premium="premium" @add-to-cart="updateCart" @remove-from-cart="removeItem"></product>
+    <product :premium="premium" @add-to-cart="updateCart"></product>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js"></script>
-<script src="main.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js">
+
+</script><script src="main.js"></script>
 </body>
 </html>
